--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,6 @@
+<hr>
 <img src="/mae-profile.png" style="max-width:100%;height:auto;">
+credit for art: <a href="https://twitter.com/salazalas">salazalas</a>
 <div class="row">
   <div class="column">
     <a href='https://graphics-cafe.tumblr.com/' target='_blank'><img src='/trans-pride-blink.gif'></a>
