--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "PressStart2P";
+  src: url("/PressStart2P-Regular.ttf");
+}
+
 html, body { background: #2d2d2d; }
 
 html { height: 100%; }
@@ -14,7 +19,12 @@ body {
 
 .post-meta { text-align: right; }
 
-h2, h3, h4, h5, h6 { margin-top: 3rem; }
+h1 { font-family: "PressStart2P", "Bitstream Vera Serif", serif;}
+
+h2, h3, h4, h5, h6 {
+  font-family: "PressStart2P", "Bitstream Vera Serif", serif;
+  margin-top: 3rem;
+}
 
 hr { margin: 2rem 0; }
 
