added furryring widget

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -14,4 +14,8 @@ credit for art: <a href="https://twitter.com/salazalas">salazalas</a>
     <a href='https://graphics-cafe.tumblr.com/' target='_blank'><img src='/robotgender.gif'></a>
     <a href='https://blinkies.cafe' target='_blank'><img src='https://blinkies.cafe/b/display/blinkiesCafe-badge.gif' alt='blinkies.cafe | make your own blinkies!'></a>
   </div>
+     <div id='furryring'>
+         <script type="text/javascript" src="https://furryring.neocities.org/onionring-variables.js"></script>
+         <script type="text/javascript" src="https://furryring.neocities.org/onionring-widget.js"></script>
+    </div>
 </div>
