Added images to footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,14 +5,17 @@ credit for art: <a href="https://twitter.com/salazalas">salazalas</a>
   <div class="column">
     <a href='https://graphics-cafe.tumblr.com/' target='_blank'><img src='/trans-pride-blink.gif'></a>
     <img src="/gaywebsite.gif">
+		<a href="https://archlinux.org" target='_blank'><img src="/archlinux.gif"></a>
   </div>
   <div class="column">
     <a href='https://graphics-cafe.tumblr.com/' target='_blank'><img src='/debian-blink.gif'></a>
     <img src="/autism-acceptance.jpg">
+    <img src="/queer.png">
   </div>
   <div class="column">
     <a href='https://graphics-cafe.tumblr.com/' target='_blank'><img src='/robotgender.gif'></a>
     <a href='https://blinkies.cafe' target='_blank'><img src='https://blinkies.cafe/b/display/blinkiesCafe-badge.gif' alt='blinkies.cafe | make your own blinkies!'></a>
+		<img src="paws.png">
   </div>
      <div id='furryring'>
          <script type="text/javascript" src="https://furryring.neocities.org/onionring-variables.js"></script>
